--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "mongodb": "^3.6.9",
     "multer": "^1.4.2",
     "multer-storage-cloudinary": "^4.0.0",
+    "ngx-pagination": "^5.1.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
