--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -22,10 +22,10 @@
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.26.2",
     "dotenv": "^10.0.0",
-    "express": "^4.17.1",
-    "express-async-handler": "^1.1.4",
+    "express": "^4.17.3",
+    "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
-    "mongodb": "^3.6.9",
+    "mongodb": "^3.7.3",
     "multer": "^1.4.2",
     "multer-storage-cloudinary": "^4.0.0",
     "ngx-pagination": "^5.1.1",
