--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "covid-hospital-management",
-  "version": "16.13.0",
+  "description": "a really cool app",
+  "version": "1.0.0",
+  "engines": {
+    "node": "16.13.0"
+  },
   "scripts": {
     "ng": "ng",
     "start": "node server.js",
